--- a/src/styles/components/_scrollable.scss
+++ b/src/styles/components/_scrollable.scss
@@ -7,13 +7,13 @@
   flex: 1;
   overflow-x: hidden;
   overflow-y: scroll;
-  -webkit-mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 7%, rgba(0, 0, 0, 1) 100%, rgba(0, 0, 0, 0) 100%);
+  mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 20px, rgba(0, 0, 0, 1) 75px, rgba(0, 0, 0, 1) 100%, rgba(0, 0, 0, 0) 100%);
 
   &::-webkit-scrollbar {
     display: none;
   }
 
   &--is-scrolling {
-    -webkit-mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 7%, rgba(0, 0, 0, 1) 93%, rgba(0, 0, 0, 0) 100%);
+    mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 20px, rgba(0, 0, 0, 1) 75px, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 100%);
   }
 }
